--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ SET(CMAKE_BUILD_TYPE Debug)
 SET(CMAKE_VERBOSE_MAKEFILE ON)
 
 IF (PREFIX)
-	SET(CMAKE_INSTALL_PREFIX ${PREFIX})
+ SET(CMAKE_INSTALL_PREFIX ${PREFIX})
 ENDIF (PREFIX)
 
 SET(PREFIX_BIN bin)
@@ -60,7 +60,8 @@ IF(NOT WIN32)
  IF(NOT APPLE)
   SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,-Bsymbolic")
  ELSE(NOT APPLE)
-  SET(CMAKE_SHARED_LINKER_FLAGS "-Wl")
+  SET(CMAKE_SHARED_LINKER_FLAGS "-Wl -undefined dynamic_lookup")
+  ADD_DEFINITIONS( "-Wno-overloaded-virtual" )
  ENDIF(NOT APPLE)
 
 ENDIF(NOT WIN32)
@@ -93,6 +94,8 @@ ENDIF(OPENGL_GLU_FOUND)
 
 
 SET(BUILD_SHARED_LIBS TRUE)
+SET( wxWidgets_USE_DEBUG ON)
+
 FIND_PACKAGE(wxWidgets REQUIRED)
 
 INCLUDE(${wxWidgets_USE_FILE})
@@ -142,13 +145,14 @@ IF(WIN32)
 #  ADD_DEPENDENCIES(${PACKAGE_NAME} ${PARENT})
 ENDIF(WIN32)
 
+IF(NOT APPLE)
 TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${wxWidgets_LIBRARIES} )
+ENDIF(NOT APPLE)
 
 
 
 
-
-IF(UNIX)
+IF(UNIX AND NOT APPLE)
 SET(PARENT opencpn)
 SET(PREFIX_PARENTDATA ${PREFIX_DATA}/${PARENT})
 SET(PREFIX_PARENTBIN bin)
@@ -157,7 +161,7 @@ INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PARENTDATA}
 INSTALL(FILES "buildlinux/OCPNsenc/OCPNsenc"
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_EXECUTE
        DESTINATION ${PREFIX_PARENTBIN})
-ENDIF(UNIX)
+ENDIF(UNIX AND NOT APPLE)
 
 IF(WIN32)
 #INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME DESTINATION "c:/Program Files/OpenCPN/plugins")
@@ -167,8 +171,17 @@ INSTALL(FILES "buildwin/OCPNsenc/OCPNsenc.exe"
        DESTINATION ".")
 
 INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME DESTINATION ".")
-
 ENDIF(WIN32)
+
+IF(APPLE)
+SET(CMAKE_INSTALL_PREFIX "/tmp")
+
+INSTALL(FILES "buildosx/OCPNsenc/OCPNsenc"
+       PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_EXECUTE
+       DESTINATION "s63_pi/s63_pi")
+
+INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION "s63_pi/s63_pi")
+ENDIF(APPLE)
 
 # find src/ -name \*.cpp -or -name \*.c -or -name \*.h -or -name \*.hpp >po/POTFILES.in
 FIND_PROGRAM(GETTEXT_XGETTEXT_EXECUTABLE xgettext)
@@ -385,31 +398,17 @@ ENDIF(TWIN32 AND NOT UNIX)
 INCLUDE(CPack)
 
 IF(APPLE)
-# -- Run the BundleUtilities cmake code
-  SET(CPACK_BUNDLE_PLIST "${CMAKE_SOURCE_DIR}/buildosx/Info.plist")
-  SET(MACOSX_BUNDLE_BUNDLE_NAME "S63_pi")
-
-  SET(APPS "\${CMAKE_INSTALL_PREFIX}/bin/OpenCPN.app")
-  SET(DIRS "")
-
-  SET(LIBS "\${CMAKE_INSTALL_PREFIX}/bin/OpenCPN.app/Contents/PlugIns/libdashboard_pi.dylib")
-  SET(LIBS
-      ${LIBS} "\${CMAKE_INSTALL_PREFIX}/bin/OpenCPN.app/Contents/PlugIns/libgrib_pi.dylib")
-
-  INSTALL(CODE "
-   include(BundleUtilities)
-   fixup_bundle(\"${APPS}\"   \"${LIBS}\"   \"${DIRS}\")
-   " COMPONENT Runtime)
 
  ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dmg
-   COMMAND ${CMAKE_SOURCE_DIR}/buildosx/create-dmg ${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dmg ${CMAKE_INSTALL_PREFIX}/bin/
-   DEPENDS ${CMAKE_INSTALL_PREFIX}/bin/OpenCPN.app
+   COMMAND ${CMAKE_SOURCE_DIR}/buildosx/create-dmg ${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dmg ${CMAKE_INSTALL_PREFIX}/s63_pi/
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    COMMENT "create-dmg [${PACKAGE_NAME}]: Generated dmg file."
 )
 
-# ADD_CUSTOM_TARGET(create-dmg COMMENT "create-dmg: Done." DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dmg)
+ ADD_CUSTOM_TARGET(create-dmg COMMENT "create-dmg: Done."
+ DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.dmg)
+
 
 
 ENDIF(APPLE)
