Update for Debian/Ubuntu amd64 architecture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,21 @@ SET(PREFIX_BIN bin)
 SET(PREFIX_INCLUDE include)
 SET(PREFIX_DATA lib)
 
+IF (NOT WIN32)
+  # default
+  SET (ARCH "i386")
+  IF (EXISTS /etc/debian_version)
+    IF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+      SET (ARCH "amd64")
+    ELSE (CMAKE_SIZEOF_VOID_P MATCHES "8")
+      SET (ARCH "i386")
+    ENDIF (CMAKE_SIZEOF_VOID_P MATCHES "8")
+  ENDIF (EXISTS /etc/debian_version)
+endif(NOT WIN32)
+
+MESSAGE (STATUS "*** Build Architecture is ${ARCH}")
+
+
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/cpl)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
@@ -166,10 +181,17 @@ SET(PARENT opencpn)
 SET(PREFIX_PARENTDATA ${PREFIX_DATA}/${PARENT})
 SET(PREFIX_PARENTBIN bin)
 INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PARENTDATA})
-#INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION "/home/dsr")
-INSTALL(FILES "buildlinux/OCPNsenc/OCPNsenc"
-       PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ WORLD_EXECUTE
+
+IF (ARCH MATCHES "amd64")
+INSTALL(FILES "buildlinux64/OCPNsenc/OCPNsenc"
+       PERMISSIONS OWNER_EXECUTE OWNER_WRITE WORLD_READ WORLD_EXECUTE
        DESTINATION ${PREFIX_PARENTBIN})
+ELSE (ARCH MATCHES "amd64")
+INSTALL(FILES "buildlinux/OCPNsenc/OCPNsenc"
+       PERMISSIONS OWNER_EXECUTE OWNER_WRITE WORLD_READ WORLD_EXECUTE
+       DESTINATION ${PREFIX_PARENTBIN})
+ENDIF (ARCH MATCHES "amd64")
+
 ENDIF(UNIX AND NOT APPLE)
 
 IF(WIN32)
@@ -264,7 +286,6 @@ ENDIF(GETTEXT_MSGFMT_EXECUTABLE)
 # build a CPack driven installer package
 #include (InstallRequiredSystemLibraries)
 
-SET (ARCH "i386")
 SET (LIB_INSTALL_DIR "lib")
 SET (PACKAGE_FORMAT "DEB")
 SET (PACKAGE_DEPS "libc6, libwxgtk2.8-0 (>= 2.8.7.1), libglu1-mesa (>= 7.0.0), libgl1-mesa-glx (>= 7.0.0), zlib1g, bzip2")
@@ -297,23 +318,8 @@ IF(WIN32 AND NOT UNIX)
   SET(CPACK_NSIS_DIR "${CMAKE_SOURCE_DIR}/buildwin/NSIS_Unicode")  #Gunther
   SET(CPACK_BUILDWIN_DIR "${CMAKE_SOURCE_DIR}/buildwin")  #Gunther
 
-
-# Install the VC100 Redistributable
-#  SET(vc10_redist "vcredist_x86.exe")
-
-#    STRING( REPLACE "/" "\\\\" Temp_vc10_redist ${vc10_redist} )
-#    GET_FILENAME_COMPONENT( VC10_FILE_NAME ${vc10_redist} NAME )
-#    SET( CPACK_NSIS_EXTRA_INSTALL_COMMANDS ${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}
-#      "ExecWait '\\\"$INSTDIR\\\\vc10\\\\${VC10_FILE_NAME}\\\" /q /norestart' $0\\n"
-#      " Remove folder\\n  RMDir /r \\\"$INSTDIR\\\\vc10\\\"\\n\\n" )
-
-
 ELSE(WIN32 AND NOT UNIX)
   SET(CPACK_PACKAGE_INSTALL_DIRECTORY ${PACKAGE_NAME})
-#  SET(CPACK_STRIP_FILES "bin/opencpn.exe")
-#  SET(CPACK_SOURCE_STRIP_FILES "")
-  SET(CPACK_PACKAGE_FILE_NAME "${PACKAGE_NAME}_${PACKAGE_VERSION}-${PACKAGE_RELEASE}_${ARCH}" )
-
 ENDIF(WIN32 AND NOT UNIX)
 
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/data/license.txt")
@@ -375,6 +381,8 @@ IF(UNIX AND NOT APPLE)
     SET(CPACK_PACKAGE_DESCRIPTION "S63 Chart PlugIn for OpenCPN")
     SET(CPACK_SET_DESTDIR ON)
     SET(CPACK_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
+    SET(CPACK_PACKAGE_FILE_NAME "${PACKAGE_NAME}_${PACKAGE_VERSION}-${PACKAGE_RELEASE}_${ARCH}" )
+
 
 ENDIF(UNIX AND NOT APPLE)
 
