--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ SET(PLUGIN_SOURCE_DIR .)
 MESSAGE (STATUS "*** Building ${PACKAGE_NAME} ***")
 
 SET(VERSION_MAJOR "0")
-SET(VERSION_MINOR "2")
+SET(VERSION_MINOR "3")
 SET(VERSION_PATCH "0")
 SET(PACKAGE_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" )
 
@@ -54,6 +54,7 @@ MESSAGE (STATUS "*** Build Architecture is ${ARCH}")
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/cpl)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/dsa)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
 
@@ -159,7 +160,14 @@ SET(SRC_ISO8211
                 src/myiso8211/ddfutils.cpp
         )
 
-ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_S63} ${SRC_CPL} ${SRC_ISO8211})
+SET(SRC_DSA
+                src/dsa/dsa_utils.cpp
+                src/dsa/mp_math.c
+                src/dsa/sha1.c
+    )
+
+
+ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_S63} ${SRC_CPL} ${SRC_ISO8211} ${SRC_DSA})
 #ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_S63} )
 
 IF(WIN32)
