--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ SET(PLUGIN_SOURCE_DIR .)
 MESSAGE (STATUS "*** Building ${PACKAGE_NAME} ***")
 
 SET(VERSION_MAJOR "0")
-SET(VERSION_MINOR "3")
+SET(VERSION_MINOR "4")
 SET(VERSION_PATCH "0")
 SET(PACKAGE_VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" )
 
@@ -259,13 +259,12 @@ MACRO(GETTEXT_UPDATE_PO _potFile)
 ENDMACRO(GETTEXT_UPDATE_PO)
 
 IF (GETTEXT_MSGMERGE_EXECUTABLE)
-FILE(GLOB PACKAGE_PO_FILES po/*.po)
+FILE(GLOB PACKAGE_PO_FILES ${CMAKE_SOURCE_DIR}/po/*.po)
 GETTEXT_UPDATE_PO(po/${PACKAGE_NAME}.pot ${PACKAGE_PO_FILES})
 ENDIF(GETTEXT_MSGMERGE_EXECUTABLE)
 
 SET(_gmoFiles)
-MACRO(GETTEXT_BUILD_MO)
-   FOREACH (_poFile ${ARGN})
+MACRO(GETTEXT_BUILD_MO  _poFile _lang)
       GET_FILENAME_COMPONENT(_absFile ${_poFile} ABSOLUTE)
       GET_FILENAME_COMPONENT(_poBasename ${_absFile} NAME_WE)
       SET(_gmoFile ${CMAKE_CURRENT_BINARY_DIR}/${_poBasename}.mo)
@@ -277,14 +276,42 @@ MACRO(GETTEXT_BUILD_MO)
          COMMENT "s63-i18n [${_poBasename}]: Created mo file."
       )
 
+IF(APPLE)
+   INSTALL(FILES ${_gmoFile} DESTINATION ${CMAKE_INSTALL_PREFIX}/s63_pi/s63_pi/Resources/${_lang}.lproj RENAME ${PACKAGE_NAME}.mo )
+ELSE(APPLE)
+   INSTALL(FILES ${_gmoFile} DESTINATION ${PREFIX_DATA}/locale/${_lang}/LC_MESSAGES RENAME ${PACKAGE_NAME}.mo PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
+ENDIF(APPLE)
+
 #      INSTALL(FILES ${_gmoFile} DESTINATION ${PREFIX_DATA}/locale/${_poBasename}/LC_MESSAGES RENAME opencpn-${PACKAGE_NAME}.mo )
       SET(_gmoFiles ${_gmoFiles} ${_gmoFile})
-   ENDFOREACH (_poFile )
 ENDMACRO(GETTEXT_BUILD_MO)
 
 if(GETTEXT_MSGFMT_EXECUTABLE)
-   FILE(GLOB PACKAGE_PO_FILES po/*.po)
-   GETTEXT_BUILD_MO(${PACKAGE_PO_FILES})
+# Could use a glob here..
+GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_fr_FR.po fr)
+GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_es_ES.po es)
+GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_de_DE.po de)
+GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_et_ET.po et)
+GETTEXT_BUILD_MO(${CMAKE_SOURCE_DIR}/po/${PACKAGE_NAME}_pl_PL.po pl)
+
+
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_cs_CZ.po cs)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_da_DK.po da)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_it_IT.po it)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_nl_NL.po nl)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_ru_RU.po ru)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_sv_SE.po sv)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_pt_PT.po pt_PT)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_pt_BR.po pt_BR)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_nb_NO.po nb_NO)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_tr_TR.po tr_TR)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_fi_FI.po fi_FI)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_el_GR.po el_GR)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_zh_TW.po zh_TW)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_hu_HU.po hu_HU)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_gl_ES.po gl_ES)
+#    GETTEXT_BUILD_MO(po/${PACKAGE_NAME}_ca_ES.po ca_ES)
+  
    ADD_CUSTOM_TARGET(s63-i18n COMMENT "s63-i18n: Done." DEPENDS ${_gmoFiles})
    ADD_DEPENDENCIES(${PACKAGE_NAME} s63-i18n)
 ENDIF(GETTEXT_MSGFMT_EXECUTABLE)
