Improve Windows installer file destination logic, languages.

--- a/NSIS.template.in
+++ b/NSIS.template.in
@@ -790,12 +790,27 @@ Section "-Install Section" SecInstall
 
 	@CPACK_NSIS_EXTRA_INSTALL_COMMANDS@
 
+;                MessageBox MB_OK|MB_ICONSTOP "Install dir $INSTDIR"
+
+;       Record the root of the target install directory to enable language file copies
+                StrCpy $R1 0
+                Push $INSTDIR
+                Push "\plugins\s63_pi"
+                Push ">"
+                Call StrLoc
+                Pop $0
+
+                StrCpy $R1 $INSTDIR $0
+                StrCpy $INSTROOT $R1
+
+;      MessageBox MB_OK|MB_ICONSTOP "Install root $INSTROOT"
+
 ;       Manually move language (.mo) files to the opencpn share location
-	CopyFiles "$INSTDIR\lib\locale\de\LC_MESSAGES\s63_pi.mo" "$INSTROOT\OpenCPN\share\locale\de\LC_MESSAGES"
-        CopyFiles "$INSTDIR\lib\locale\fr\LC_MESSAGES\s63_pi.mo" "$INSTROOT\OpenCPN\share\locale\fr\LC_MESSAGES"
-        CopyFiles "$INSTDIR\lib\locale\es\LC_MESSAGES\s63_pi.mo" "$INSTROOT\OpenCPN\share\locale\es\LC_MESSAGES"
-        CopyFiles "$INSTDIR\lib\locale\et\LC_MESSAGES\s63_pi.mo" "$INSTROOT\OpenCPN\share\locale\et\LC_MESSAGES"
-        CopyFiles "$INSTDIR\lib\locale\pl\LC_MESSAGES\s63_pi.mo" "$INSTROOT\OpenCPN\share\locale\pl\LC_MESSAGES"
+	CopyFiles "$INSTDIR\lib\locale\de\LC_MESSAGES\s63_pi.mo" "$INSTROOT\share\locale\de\LC_MESSAGES"
+        CopyFiles "$INSTDIR\lib\locale\fr\LC_MESSAGES\s63_pi.mo" "$INSTROOT\share\locale\fr\LC_MESSAGES"
+        CopyFiles "$INSTDIR\lib\locale\es\LC_MESSAGES\s63_pi.mo" "$INSTROOT\share\locale\es\LC_MESSAGES"
+        CopyFiles "$INSTDIR\lib\locale\et\LC_MESSAGES\s63_pi.mo" "$INSTROOT\share\locale\et\LC_MESSAGES"
+        CopyFiles "$INSTDIR\lib\locale\pl\LC_MESSAGES\s63_pi.mo" "$INSTROOT\share\locale\pl\LC_MESSAGES"
 
 	;# Create uninstaller
 	WriteUninstaller "$INSTDIR\Uninstall @CPACK_PACKAGE_VERSION@.exe"
@@ -2150,15 +2165,6 @@ FunctionEnd
 		${EndIf}
 
 
-                StrCpy $R1 0
-                Push $INSTDIR
-                Push "\OpenCPN\plugins\s63_pi"
-                Push ">"
-                Call StrLoc
-                Pop $0
-
-                StrCpy $R1 $INSTDIR $0
-                StrCpy $INSTROOT $R1
 
 	FunctionEnd
 
@@ -2269,11 +2275,14 @@ FunctionEnd
 			Abort
 		${EndIf}
 
+/*
                 ${If} $INSTALL_TYPE == 4
 		${AndIf} ${FileExists} "$INSTDIR\opencpn.exe"
 			MessageBox MB_OK|MB_ICONSTOP "$(Msg_Path_Installation_Exists)"
 			Abort
 		${EndIf}
+*/
+
 	FunctionEnd
 
 
